# match4

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ai.rs  board.rs  main.rs
