[package]
name = "connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.19.0", default-features = false }
eframe = "0.19.0"
serde = { version = "1", optional = true, features = ["derive"] }
array2d = "0.2.1"
rand = "0.8.5"